archive/EfK/cerebro-deployment.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: cerebro
  namespace: monitoring
  labels:
    app: cerebro
    kubernetes.io/name: "Cerebro"
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: cerebro

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebro
  namespace: monitoring
  labels:
    app: cerebro
spec:
  selector:
    matchLabels:
      app: cerebro
  replicas: 1
  template:
    metadata:
      labels:
        app: cerebro
    spec:
      serviceAccountName: cerebro
      containers:
      - name: cerebro
        image: feedyard/cerebro
        readinessProbe:
          httpGet:
            path: /
            port: 9000
          timeoutSeconds: 1
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 9000
          initialDelaySeconds: 30
          timeoutSeconds: 30
        ports:
        - containerPort: 9000
          protocol: TCP
