archive/EfK/elastisearch-ingest-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-ingest
  namespace: monitoring
  labels:
    component: elasticsearch
    role: ingest
    app: elasticsearch-ingest
spec:
  selector:
    component: elasticsearch
    role: ingest
    app: elasticsearch-ingest
  ports:
  - name: http
    port: 9200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-ingest
  namespace: monitoring
  labels:
    component: elasticsearch
    role: ingest
    app: elasticsearch-ingest
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: ingest
      app: elasticsearch-ingest
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: ingest
        app: elasticsearch-ingest
    spec:
      serviceAccountName: elasticsearch
      containers:
      - name: elasticsearch-ingest
        image: docker.elastic.co/elasticsearch/elasticsearch:6.3.0
        resources:
          requests:
            cpu: 0.25
          limits:
            cpu: 1
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - emptyDir:
              medium: ""
            name: storage
