archive/EfK/elastisearch-master-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-discovery
  namespace: monitoring
  labels:
    component: elasticsearch
    role: master
    app: elasticsearch-master
spec:
  selector:
    component: elasticsearch
    role: master
    app: elasticsearch-master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-master
  namespace: monitoring
  labels:
    component: elasticsearch
    role: master
    app: elasticsearch-master
spec:
  selector:
      matchLabels:
        component: elasticsearch
        role: master
        app: elasticsearch-master
  replicas: 3
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
        app: elasticsearch-master
    spec:
      serviceAccountName: elasticsearch
      containers:
      - name: elasticsearch-master
        image: docker.elastic.co/elasticsearch/elasticsearch:6.3.0
        resources:
          requests:
            cpu: 0.25
          limits:
            cpu: 1
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - emptyDir:
              medium: ""
            name: storage
