archive/EfK/cerebro-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cerebro
  namespace: monitoring
  annotations:
   kubernetes.io/ingress.class: traefik
   traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /cerebro
        backend:
          serviceName: cerebro
          servicePort: 9000
